--- a/view/partials/navbar.ejs
+++ b/view/partials/navbar.ejs
@@ -31,7 +31,7 @@
 
                 <nav class="main-nav">
                     <ul class="menu sf-arrows">
-                        <li class="megamenu-container active">
+                        <li class="megamenu-container">
                             <a href="/">Home</a>
                         </li>
                         <li>
