--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -15,13 +15,13 @@
                                 <li>
                                     <a href="/allproducts">Shop</a>
                                 </li>
-                                <li >
+                                <li class="megamenu-container active">
                                     <a href="/contactUs">Contact</a>
                                 </li>
                                 <li >
                                     <a href="/aboutUs">About Us</a>
                                 </li>
-                                <li >
+                                <li class="megamenu-container active">
                                     <a href="/userProfile">My Account</a>
                                 </li>                                
                             </ul><!-- End .menu -->
@@ -65,7 +65,7 @@
                             
                             <div class="dropdown">
                                 <a  class="dropdown-toggle p-4" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  <i class="fa-regular fa-user fa-sm " style="color: #ffffff; "></i> <!-- Icon here -->
+                                  <i class="fa-regular fa-user fa-sm " style="color: #e9c074; "></i> <!-- Icon here -->
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right mt-2" aria-labelledby="dropdownMenu2" style="width: 40px;" >
                                     
