--- a/view/user/profile.ejs
+++ b/view/user/profile.ejs
@@ -104,7 +104,7 @@
                                                     </div><!-- End .col-lg-6 -->
                                                 </div><!-- End .row -->
                                                                 <h6>Your Referral Link</h6>
-                                                                <input type="text" class="form-control" id="referralLink" value="http://localhost:3000/register?referralCode=<%=user.ReferId%>" readonly>
+                                                                <input type="text" class="form-control" id="referralLink" value="https://divine-styles.cloud/register?referralCode=<%=user.ReferId%>" readonly>
 
                                                                 <a class="btn btn-primary" href="" onclick="copyReferralLink()">Copy Link</a>
                                                                 <span id="copyStatus"></span>
