--- a/view/partials/footerbar.ejs
+++ b/view/partials/footerbar.ejs
@@ -64,7 +64,7 @@
 
     <div class="footer-bottom" hidden>
         <div class="container">
-            <p class="footer-copyright">Copyright © 2019 Molla Store. All Rights Reserved.</p><!-- End .footer-copyright -->
+            <p class="footer-copyright">Copyright © 2024 DivineStyle. All Rights Reserved.</p><!-- End .footer-copyright -->
             <figure class="footer-payments">
                 <img src="/user/assets/images/payments.png" alt="Payment methods" width="272" height="20">
             </figure><!-- End .footer-payments -->
